paar overflow issues

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -10,11 +10,11 @@ html {
   scroll-behavior: smooth;
 }
 
-body { 
-  margin:0;
-  padding:0;
-	perspective: 1px;
-	transform-style: preserve-3d;
+body {
+  margin: 0;
+  padding: 0;
+  perspective: 1px;
+  transform-style: preserve-3d;
   height: 100%;
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
@@ -22,28 +22,23 @@ body {
   overflow-x: hidden;
   font-family: Nunito;
   font-size: 1rem;
- 
-  
 }
 
-
-
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    transition: scale(1) .1s ease-in-out;
+  text-decoration: none;
+  color: inherit;
+  transition: scale(1) 0.1s ease-in-out;
 }
 
 h1 {
-   font-size: 250%
+  font-size: 250%;
 }
-
 
 p {
   font-size: 100%;
@@ -52,41 +47,39 @@ p {
 }
 
 .header {
-    text-align: center;
-    color: #fff;
-    font-size: 175%;
-    text-shadow: 0 1px 1px #000;
-    
+  text-align: center;
+  color: #fff;
+  font-size: 175%;
+  text-shadow: 0 1px 1px #000;
 }
 
 .hero {
-    min-width: 50%;
-    padding: 5%;
+  min-width: 50%;
+  padding: 5%;
 }
 
 .nav {
-    pointer-events: all;
-    display: flex;
-    justify-content: center;
-    /* position: sticky;
+  pointer-events: all;
+  display: flex;
+  justify-content: center;
+  /* position: sticky;
     top: 0px;
     z-index: 9999; */
 }
 
 .nav ul {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    width: 40rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  width: 40rem;
 }
 
 .nav a {
-  padding: .6rem;
+  padding: 0.6rem;
 }
 
 .nav a:hover {
-    color: white;
-    
+  color: white;
 }
 
 .menu-selected {
@@ -100,12 +93,12 @@ p {
   flex-flow: column nowrap;
   justify-content: space-between;
 
-    min-width: 100%;
-  height: 100%;
-    background: rgba(206, 206, 206, 0.5);
-    padding: 5%;
-    box-shadow: 0 0 3px rgba(0, 0, 0, .4);
-    
+  min-width: 100%;
+  min-height: 100%;
+  background: rgba(206, 206, 206, 0.5);
+  padding: 5%;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+  /* border: 1px solid red; */
 }
 
 .to-top {
@@ -116,10 +109,10 @@ p {
   scroll-snap-align: start;
   position: relative;
   min-height: 100vh;
+  /* max-height: auto; */
   width: 100vw;
-  box-shadow: 0 0 8px 1px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.2);
   transform-style: inherit;
-  
 }
 
 .slide.slide-hero {
@@ -131,6 +124,13 @@ p {
   height: 100%;
 }
 
+.slide.slide-content.bigger {
+  padding: 0;
+  /* height: auto; */
+  height: 100%;
+}
+
+
 .slide:before {
   content: "";
   position: absolute;
@@ -138,7 +138,7 @@ p {
   bottom: 0;
   left: 0;
   right: 0;
-  box-shadow: 0 0 8px 1px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.2);
   pointer-events: none;
   z-index: 2;
 }
@@ -149,30 +149,31 @@ p {
 
 .spotify-player {
   position: relative;
-  padding-bottom: 56.25%; 
-  height: 0; 
-  overflow: hidden; 
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
   max-width: 100%;
 }
 
-.spotify-player iframe, .spotify-player object, .spotify-player embed { 
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
+.spotify-player iframe,
+.spotify-player object,
+.spotify-player embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
 }
 
-.slide, .slide:before {
-  background: 50% 50% / cover;  
-  
-
+.slide,
+.slide:before {
+  background: 50% 50% / cover;
 }
 
 .footer {
   color: #fff;
   text-shadow: 0 2px 2px #000;
-  z-index: 4; 
+  z-index: 4;
 }
 
 .footer p {
@@ -203,55 +204,56 @@ p {
   background-color: white;
   height: 100vh;
 }
+*/
 
 
-iframe {
+/* iframe {
   
   width: 100%;
   height: 100vh;
-} */
-
+}  */
 
 #title {
   background-image: url("images/Studio\ MOW-0386.jpg");
-  z-index:2;
+  z-index: 2;
 }
 
 #title h1 {
- transform: translateZ(.25px) scale(.75);
- transform-origin: 50% 100%;
+  transform: translateZ(0.25px) scale(0.75);
+  transform-origin: 50% 100%;
 }
-
 
 #slide1:before {
   background-image: url("images/Studio\ MOW-0560.jpg");
   transform: translateZ(-1px) scale(2);
+  overflow: auto;
 }
 
 #slide2 {
   background-image: url("images/Studio\ MOW-0425.jpg");
-  z-index:2;
+  z-index: 1;
+  overflow: auto;
 }
 
 #slide3:before {
   background-image: url("images/Studio\ MOW-0413.jpg");
   transform: translateZ(-1px) scale(2);
+  overflow: auto;
 }
 
 #slide4:before {
   background: #222;
-  z-index:-1;
+  z-index: -1;
+  overflow: auto;
 }
 
-
 @media screen and (max-width: 800px) {
-  
   .slide.slide-hero {
     padding: 10vh 10%;
   }
   .hero .navlist {
     flex-flow: column nowrap;
-  } 
+  }
 }
 
 /* .hidden {
@@ -260,10 +262,15 @@ iframe {
 } */
 
 @keyframes fade-in {
-  from {opacity: 0; transform: scale(.7,.7)}
-  to {opacity: 1; pointer-events: all;}
+  from {
+    opacity: 0;
+    transform: scale(0.7, 0.7);
+  }
+  to {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
 .fade-in-element {
-animation: fade-in 1.4s;
+  animation: fade-in 1.4s;
 }
-
